Fixed Padding and Spacing of Footer

--- a/css/downtownharrisonburg-nav.css
+++ b/css/downtownharrisonburg-nav.css
@@ -52,7 +52,7 @@ a:hover {
 }
 
 footer {
-    padding: 3%;
+    padding: ;
     background-color: #460084;
     height: 20%;
 }
@@ -162,5 +162,7 @@ h3 {
     right: 0;
     width: 100px;
     height: 100px;
-    margin: 0 0 -3% 45.9%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
